public/master.css
/* ... */
.ButtonLogin {
  position: relative;
  top: 35%;
}
.ButtonSignUp {
  position: relative;
  top: 38%;
}
.SignUpCTA {
  font-size: 0.7rem;
  height: 7%;
  width: 60%;
  position: relative;
  top: 33%;
  text-align: center;
  margin: 0 auto;
  color: #fff;
}
.LogInDividerContainer {
  height: 1px;
  position: relative;
  top: 35%;
  opacity: 0.5;
}
.LogInDivider {
  border-bottom: 1px solid #fff;
  margin: 0 auto;
  height: 1px;
  width: 60%;
}
.LogInCTA {
  font-size: 0.7rem;
  height: 7%;
  margin: 0 auto;
  position: relative;
  top: 37%;
  text-align: center;
  color: #fff;
}
.LogInAboutCasey {
  font-size: 0.9rem;
  text-align: center;
  position: relative;
  top: 58%;
}
.LogInAboutCasey a {
  color: #fff;
  opacity: 0.5;
}
.LogInFormContainer {
  position: relative;
  top: 40%;
}
.LogInForm {
  background: #808080;
  margin: 0 auto;
  position: relative;
  width: 90%;
}
input[type=text],
input[type=password] {
  height: 2.8rem;
  width: 100%;
  font-size: 0.9rem;
}
input[type=text] {
  border: 0;
  border-bottom: 1px solid #ccc;
}
input:focus {
  outline: none;
}
.InputPadding {
  padding: 1rem;
}
.PasswordHelp {
  position: relative;
  top: 42%;
  height: 2rem;
  text-align: center;
}
.PasswordHelp a {
  color: #fff;
  font-size: 0.85rem;
}
.ButtonShowPassword {
  background: url("_img/_icon/dark/eye.svg") no-repeat;
  background-position: center center;
  background-size: 100%;
  border: none;
  cursor: pointer;
  display: block;
  height: 1.3rem;
  width: 1.3rem;
  text-indent: -99999px;
  opacity: 0.1;
  position: absolute;
  top: 64%;
  right: 10%;
  z-index: 9;
}
.ClearFloat {
  clear: both;
}
.YourMoneySectionTitle {
  font-size: 0.9rem;
}
.YourMoneySection {
  width: 42%;
  float: left;
}
.Earned {
  border-right: solid 1px #f2f2f2;
}
.Spent {
  border-right: solid 1px #f2f2f2;
}
.WhatsLeft {
  width: 100%;
}
.WhatsLeft {
  position: relative;
  top: -28px;
  left: 50%;
  display: inline;
}
.WhatsLeftTitle {
  position: relative;
  right: 50%;
  top: 2rem;
}
.YourMoneySectionAmt {
  font-size: 2rem;
  font-family: 'CircularStdBold', sans-serif;
}
.ColorLine {
  background-color: #f00;
  background-image: linear-gradient(to right, #ff6100, #ff000d, #500072);
  height: 6px;
  width: 100%;
  position: fixed;
  bottom: 0px;
}
.ViewHeader {
  height: 17rem;
}
.BudgetHeaderProgBarContainer {
  background: #f2f2f2;
  height: 1.3rem;
  margin: 0 1rem;
  position: relative;
  top: 0.5rem;
}
.BudgetHeaderProgBar {
  background-image: linear-gradient(to right, #a7cc74, #00f48e);
  display: block;
  height: 100%;
  width: 45%;
}
.ProgBarMarker {
  height: 2rem;
  width: 1px;
  background: #000;
  position: absolute;
  left: 20%;
  top: -0.3rem;
}
.ButtonSort {
  background: url("_img/_icon/dark/sort.svg") no-repeat;
  height: 24px;
  width: 24px;
  position: relative;
  top: -6vh;
  left: 81vw;
  text-indent: -9999px;
}
.ButtonSettings {
  background: url("_img/_icon/dark/gear.svg") no-repeat;
  height: 24px;
  width: 24px;
  position: relative;
  top: -0.65rem;
  left: 89vw;
  text-indent: -9999px;
}
.BudgetDaysLeft {
  text-align: center;
  position: relative;
  top: 5rem;
  font-size: 0.9rem;
}
.BudgetTotal {
  font-size: 0.9rem;
  margin: -2rem 1rem 0 0;
  float: right;
  position: relative;
  top: 3.5rem;
}
.BudgetContainer {
  position: relative;
  height: 5rem;
}
.BudgetTitle {
  float: left;
  color: #000;
  font-size: 0.9rem;
}
.BudgetProgressAmt {
  float: right;
  font-size: 0.9rem;
}
.ProgBarContainer {
  background: #f2f2f2;
  height: 5px;
  width: 92%;
  margin: 0 auto;
  position: relative;
  top: 3.3rem;
}
.Progress {
  background-image: linear-gradient(to right, #00f48e, #a7cc74);
  display: block;
  height: 100%;
  width: 45%;
}
.NoMoreTrans {
  text-align: center;
}
.DangerZone {
  display: block;
  background-image: linear-gradient(to right, #fad961, #f76b1c);
  height: 100%;
  width: 90%;
}
.OverBudgetBarContainer {
  width: 100%;
  height: 5px;
  position: relative;
  top: 3.3rem;
  padding: 0 0 0 1rem;
}
.OverBudgetBar {
  display: block;
  background-image: linear-gradient(to right, #9f041b, #f5515f);
  height: 100%;
  width: 100%;
}
.OverBudgetContainer {
  background: #ffe2e6;
}
.EditBudgetsBtnClose {
  background: url("_img/_icon/dark/close.svg") no-repeat;
  background-size: 100%;
  height: 24px;
  width: 24px;
  position: absolute;
  right: 1rem;
  text-indent: -9999px;
  pointer: cursor;
  top: 1rem;
}
.EditBudgetsContainer {
  font-size: 0.9rem;
}
.BudgetEditViewHeader {
  height: 17rem;
}
.BtnBackToBudgets {
  display: flex;
}
.BtnBackToBudgets div {
  padding: 2px 0 0 10px;
}
.FontSize13 {
  font-size: 0.9rem;
}
.BudgetDetailSpent {
  margin-top: 4.2rem;
  padding-bottom: 1rem;
}
.BillsViewHeader {
  height: 9rem;
}
.ButtonSettingsBills {
  background: url("_img/_icon/dark/gear.svg") no-repeat;
  height: 24px;
  width: 24px;
  position: relative;
  top: -0.7rem;
  left: 90%;
  text-indent: -9999px;
}
.BillsContainer {
  height: 4.4rem;
  border-bottom: 1px solid #f2f2f2;
}
.BillTitle {
  font-size: 0.9rem;
}
.BillAmt {
  display: inline-block;
  width: 30%;
}
.BillDueDate {
  display: inline-block;
  font-size: 0.9rem;
  position: relative;
}
.BillStatus {
  display: inline-block;
  float: right;
  font-size: 0.9rem;
}
.NotPaid {
  position: relative;
  top: 0.2rem;
}
.NotPaid.Late {
  opacity: 1;
  color: #f00;
}
.AccountNavContainer {
  height: 4rem;
}
.AccountNavTitle {
  color: #000;
  font-size: 1.7rem;
}
.AccountNavTitleFloat {
  float: left;
}
.ButtonChevronRight {
  background: url("_img/_icon/dark/chevron_right.svg") no-repeat;
  background-position: center center;
  background-size: 50%;
  border: none;
  float: right;
  height: 1rem;
  width: 1rem;
  position: relative;
  top: 0.6rem;
  text-indent: -9999px;
}
.AccountCurrentSettings {
  font-size: 0.9rem;
  float: right;
  position: relative;
  top: 0.6rem;
}
.PersInfo {
  height: 6rem;
  width: 40%;
  display: inline-block;
}
.PersInfo p {
  line-height: 100%;
}
/* ... */

